--- a/Cloudformation/CodePipeline.yml
+++ b/Cloudformation/CodePipeline.yml
@@ -7,16 +7,16 @@ Parameters:
     Default: dev
   GithubUserName:
     Type: String
-    Default: <USERNAME>
+    Default: Md-Danish-eng
   GithubRepo:
     Type: String
     Default: Fargate-ECSCluster-Cloudformation
-  GithubBranch:
+  GithubBranch: master
     Type: String
-    Default: <BRANCH>
+    Default: 
   GithubOAuthToken:
     Type: String
-    Default: <GITHUB ACCESS TOKEN>
+    Default: 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
   ContainerPort:
     Type: Number
     Default: 8080
