--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,27 +1,17 @@
 version: 0.2
-
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws --version
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 118781765982.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=$REPOSITORY_URI
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t  microservice:1 .
+      - docker tag microservice:1 118781765982.dkr.ecr.us-east-1.amazonaws.com/microservice-118781765982-ecr-repository
   post_build:
     commands:
       - echo Build completed on `date`
-      - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      - printf '{"ImageURI":"%s:%s"}' $ECR_REPOSITORY_URI $IMAGE_TAG > imageDetail.json
-artifacts:
-    files: imagedefinitions.json
+      - echo Pushing the Docker image...
+      - docker push 118781765982.dkr.ecr.us-east-1.amazonaws.com/microservice-118781765982-ecr-repository
